overhauls text mode
